@@ -1,27 +1,26 @@
 package entity.dynamic.mob.work;
 
+import org.jetbrains.annotations.NotNull;
+
 import java.util.ArrayList;
 
 public class PriorityJob implements Comparable<PriorityJob> {
 
 	private final ArrayList<Job> jobs = new ArrayList<>();
-	private int priority;
+	private final int priority;
 
-	public PriorityJob(Job job, int priority) {
-		if (job == null) {
-			throw new NullPointerException("Cannot create PriorityJob with null Job");
-		}
+	public PriorityJob(@NotNull Job job, int priority) {
 		jobs.add(job);
 		this.priority = priority;
 	}
 
 	public Job getJob() {
-		return jobs.get(0);
+		return jobs.getFirst();
 	}
 
 	public void nextJobIfDone() {
-		if (jobs.get(0).isCompleted()) {
-			jobs.remove(0);
+		if (jobs.getFirst().isCompleted()) {
+			jobs.removeFirst();
 		}
 	}
 
@@ -29,16 +28,30 @@ public class PriorityJob implements Comparable<PriorityJob> {
 		return jobs.isEmpty();
 	}
 
-	public void setPriority(int priority) {
-		this.priority = priority;
-	}
-
 	public void addJob(Job job, int index) {
 		jobs.add(index, job);
 	}
 
 	@Override
+	public boolean equals(Object obj) {
+		if (obj == this) {
+			return true;
+		}
+
+		if (obj instanceof PriorityJob other) {
+			return priority == other.priority && jobs.equals(other.jobs);
+		}
+
+		return false;
+	}
+
+	@Override
+	public int hashCode() {
+		return jobs.hashCode() + priority;
+	}
+
+	@Override
 	public int compareTo(PriorityJob o) {
-		return Integer.compare(priority, o.priority) * -1;
+		return Integer.compare(priority, o.priority);
 	}
 }
